haven/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haven
  labels:
    name: haven
    environment: production
